added additional api commands
